--- a/investix/account-programs/expert.html
+++ b/investix/account-programs/expert.html
@@ -64,7 +64,7 @@
         <div class="account-programs__flex">
           <div class="account-programs__left">
             <h2 class="account-programs__name  account-programs__name--small">Professional Program 2018</h2>
-            <p class="account-programs__text">The $3,500 EXPERT Program includes everything in both the INTRO and STUDENT Programs, with 8 months of mentorship, plus the Star Trader Course and the ability to apply for a funded $160,000 trading account.</p>
+            <p class="account-programs__text">The $3,500 EXPERT Program includes everything in both the BASIC and ADVANCED Programs, with 8 months of mentorship, plus the Star Trader Course and the ability to apply for a funded $160,000 trading account.</p>
             <p class="account-programs__price">Price <b>$3500</b></p>
             <small class="account-programs__guarantee">14-Day Full Money Back Guarantee!</small>
             <a class="button  button--small  button--green  account-programs__button" href="#">Buy Now</a>
