--- a/investix/account-programs/ultimate.html
+++ b/investix/account-programs/ultimate.html
@@ -64,7 +64,7 @@
         <div class="account-programs__flex">
           <div class="account-programs__left">
             <h2 class="account-programs__name  account-programs__name--small">Professional Program 2018</h2>
-            <p class="account-programs__text">The $5,999 ULTIMATE Program is our premier program. It has all of the tools needed to make it as a professional trader. You receive all of the benefits of the INTRO, STUDENT, EXPERT programs with 3 months of mentorship, plus the Top Trader Course and the ability to apply for a funded $240,000 trading account.</p>
+            <p class="account-programs__text">The $5,999 ULTIMATE Program is our premier program. It has all of the tools needed to make it as a professional trader. You receive all of the benefits of the BASIC, ADVANCED, EXPERT, PRO programs with 3 months of mentorship, plus the Top Trader Course and the ability to apply for a funded $240,000 trading account.</p>
             <p class="account-programs__price">Price <b>$5999</b></p>
             <small class="account-programs__guarantee">14-Day Full Money Back Guarantee!</small>
             <a class="button  button--small  button--green  account-programs__button" href="#">Buy Now</a>
