--- a/investix/account-programs/account.html
+++ b/investix/account-programs/account.html
@@ -85,7 +85,7 @@
               <p class="account__text">Investix's BASIC program has all you need to get started: from a Self-Study course to a live Trading Chat Room.</p>
               <p class="account__text">Join this program and be eligible to apply for a $14,000 funded trading account with a maximum loss limit of $700, and receive 70%* of the net profits you generate.</p>
               <b class="account__name">Program Include</b>
-              <div class="account__flex  account__flex--edge">
+              <div class="account__flex">
                 <div class="account__box  account__box--video">
                   <b>Unlimited Online Videos Lessons Pack 1+2</b>
                 </div>
@@ -99,7 +99,7 @@
                   <b>1 Month Trading Room Access</b>
                 </div>
               </div>
-              <div class="account__flex  account__flex--second  account__flex--edge">
+              <div class="account__flex  account__flex--around  account__flex--second">
                 <div class="account__box  account__box--webinar">
                   <b>1 Month Webinar Access</b>
                 </div>
@@ -127,7 +127,7 @@
               <b class="account__name">Program Include</b>
               <div class="account__flex  account__flex--edge">
                 <div class="account__box  account__box--video">
-                  <b>Unlimited Online Videos Lessons Pack 1+2</b>
+                  <b>Unlimited Online Videos Lessons Pack 1+2+3</b>
                 </div>
                 <div class="account__box  account__box--reviews">
                   <b>Daily Reviews</b>
@@ -136,18 +136,29 @@
                   <b>Weekly Reviews</b>
                 </div>
                 <div class="account__box  account__box--room">
-                  <b>1 Month Trading Room Access</b>
+                  <b>3 Month Trading Room Access</b>
                 </div>
               </div>
-              <div class="account__flex  account__flex--second  account__flex--edge">
+              <div class="account__flex  account__flex--second">
                 <div class="account__box  account__box--webinar">
-                  <b>1 Month Webinar Access</b>
+                  <b>3 Month Webinar Access</b>
                 </div>
                 <div class="account__box  account__box--demo">
                   <b>Demo Training Account</b>
                 </div>
                 <div class="account__box  account__box--analysis">
-                  <b>Technical Analysis - The Basic</b>
+                  <b>Technical Analysis - The Basic + Advanced</b>
+                </div>
+                <div class="account__box  account__box--learn">
+                  <b>Learn Advanced<br>Trading Strategies</b>
+                </div>
+              </div>
+              <div class="account__flex  account__flex--second  account__flex--around">
+                <div class="account__box  account__box--risk">
+                  <b>Risk Management<br>Tools</b>
+                </div>
+                <div class="account__box  account__box--bonus">
+                  <b><strong>Bonus:</strong> Introduction to Crypto and Cryptocurrencies</b>
                 </div>
               </div>
               <a class="button  button--small  button--green  account__button" href="#">Buy Now</a>
@@ -165,9 +176,9 @@
               <p class="account__text">Investix's EXPERT program has all you need to get started: from a Self-Study course to a live Trading Chat Room.</p>
               <p class="account__text">Join this program and be eligible to apply for a $14,000 funded trading account with a maximum loss limit of $700, and receive 70%* of the net profits you generate.</p>
               <b class="account__name">Program Include</b>
-              <div class="account__flex  account__flex--edge">
+              <div class="account__flex">
                 <div class="account__box  account__box--video">
-                  <b>Unlimited Online Videos Lessons Pack 1+2</b>
+                  <b>Unlimited Online Videos Lessons Pack 1-4</b>
                 </div>
                 <div class="account__box  account__box--reviews">
                   <b>Daily Reviews</b>
@@ -176,18 +187,35 @@
                   <b>Weekly Reviews</b>
                 </div>
                 <div class="account__box  account__box--room">
-                  <b>1 Month Trading Room Access</b>
+                  <b>5 Month Trading Room Access</b>
                 </div>
               </div>
-              <div class="account__flex  account__flex--second  account__flex--edge">
+              <div class="account__flex  account__flex--second">
                 <div class="account__box  account__box--webinar">
-                  <b>1 Month Webinar Access</b>
+                  <b>5 Month Webinar Access</b>
                 </div>
                 <div class="account__box  account__box--demo">
                   <b>Demo Training Account</b>
                 </div>
                 <div class="account__box  account__box--analysis">
                   <b>Technical Analysis - The Basic</b>
+                </div>
+                <div class="account__box  account__box--learn">
+                  <b>Learn Advanced<br>Trading Strategies</b>
+                </div>
+              </div>
+              <div class="account__flex  account__flex--second">
+                <div class="account__box  account__box--session">
+                  <b>Weekly Group<br>Mentoring Sessions</b>
+                </div>
+                <div class="account__box  account__box--risk">
+                  <b>Risk Management<br>Tools</b>
+                </div>
+                <div class="account__box  account__box--signal">
+                  <b>Daily Signals</b>
+                </div>
+                <div class="account__box  account__box--bonus">
+                  <b><strong>Bonus:</strong> Introduction to Crypto and Cryptocurrencies</b>
                 </div>
               </div>
               <a class="button  button--small  button--green  account__button" href="#">Buy Now</a>
@@ -205,9 +233,9 @@
               <p class="account__text">Investix's PRO program has all you need to get started: from a Self-Study course to a live Trading Chat Room.</p>
               <p class="account__text">Join this program and be eligible to apply for a $14,000 funded trading account with a maximum loss limit of $700, and receive 70%* of the net profits you generate.</p>
               <b class="account__name">Program Include</b>
-              <div class="account__flex  account__flex--edge">
+              <div class="account__flex">
                 <div class="account__box  account__box--video">
-                  <b>Unlimited Online Videos Lessons Pack 1+2</b>
+                  <b>Unlimited Online Videos Lessons All Packages</b>
                 </div>
                 <div class="account__box  account__box--reviews">
                   <b>Daily Reviews</b>
@@ -216,18 +244,43 @@
                   <b>Weekly Reviews</b>
                 </div>
                 <div class="account__box  account__box--room">
-                  <b>1 Month Trading Room Access</b>
+                  <b>1 Year Trading Room Access</b>
                 </div>
               </div>
-              <div class="account__flex  account__flex--second  account__flex--edge">
+              <div class="account__flex  account__flex--second">
                 <div class="account__box  account__box--webinar">
-                  <b>1 Month Webinar Access</b>
+                  <b>1 Year Webinar Access</b>
                 </div>
                 <div class="account__box  account__box--demo">
                   <b>Demo Training Account</b>
                 </div>
                 <div class="account__box  account__box--analysis">
-                  <b>Technical Analysis - The Basic</b>
+                  <b>Technical Analysis (Expert) + Price Action + Turtle Trading</b>
+                </div>
+                <div class="account__box  account__box--learn">
+                  <b>Learn Advanced<br>Trading Strategies</b>
+                </div>
+              </div>
+              <div class="account__flex  account__flex--second">
+                <div class="account__box  account__box--session">
+                  <b>Weekly Group<br>Mentoring Sessions</b>
+                </div>
+                <div class="account__box  account__box--risk">
+                  <b>Risk Management<br>Tools</b>
+                </div>
+                <div class="account__box  account__box--signal">
+                  <b>Daily Signals</b>
+                </div>
+                <div class="account__box  account__box--live">
+                  <b>Three Live 3-hours<br>Online Sessions 1:1</b>
+                </div>
+              </div>
+              <div class="account__flex  account__flex--second  account__flex--around">
+                <div class="account__box  account__box--pers">
+                  <b>Personal Mentoring</b>
+                </div>
+                <div class="account__box  account__box--bonus">
+                  <b><strong>Bonus:</strong> Introduction to Crypto and Cryptocurrencies</b>
                 </div>
               </div>
               <a class="button  button--small  button--green  account__button" href="#">Buy Now</a>
@@ -247,7 +300,7 @@
               <b class="account__name">Program Include</b>
               <div class="account__flex  account__flex--edge">
                 <div class="account__box  account__box--video">
-                  <b>Unlimited Online Videos Lessons Pack 1+2</b>
+                  <b>Unlimited Online Videos Lessons All Packages</b>
                 </div>
                 <div class="account__box  account__box--reviews">
                   <b>Daily Reviews</b>
@@ -256,18 +309,49 @@
                   <b>Weekly Reviews</b>
                 </div>
                 <div class="account__box  account__box--room">
-                  <b>1 Month Trading Room Access</b>
+                  <b>1 Year Trading Room Access</b>
                 </div>
               </div>
               <div class="account__flex  account__flex--second  account__flex--edge">
                 <div class="account__box  account__box--webinar">
-                  <b>1 Month Webinar Access</b>
+                  <b>1 Year Webinar Access</b>
                 </div>
                 <div class="account__box  account__box--demo">
                   <b>Demo Training Account</b>
                 </div>
                 <div class="account__box  account__box--analysis">
-                  <b>Technical Analysis - The Basic</b>
+                  <b>Technical Analysis + Price Action + Turtle Trading</b>
+                </div>
+                <div class="account__box  account__box--learn">
+                  <b>Learn Advanced<br>Trading Strategies</b>
+                </div>
+              </div>
+              <div class="account__flex  account__flex--second">
+                <div class="account__box  account__box--session">
+                  <b>Weekly Group<br>Mentoring Sessions</b>
+                </div>
+                <div class="account__box  account__box--risk">
+                  <b>Risk Management<br>Tools</b>
+                </div>
+                <div class="account__box  account__box--signal">
+                  <b>Daily Signals</b>
+                </div>
+                <div class="account__box  account__box--live">
+                  <b>Three Live 3-hours<br>Online Sessions 1:1</b>
+                </div>
+              </div>
+              <div class="account__flex  account__flex--second">
+                <div class="account__box  account__box--pers">
+                  <b>Personal Mentoring</b>
+                </div>
+                <div class="account__box  account__box--market">
+                  <b>Market Psychology</b>
+                </div>
+                <div class="account__box  account__box--fund">
+                  <b>Fundamental Analysis</b>
+                </div>
+                <div class="account__box  account__box--bonus">
+                  <b><strong>Bonus:</strong> Introduction to Crypto and Cryptocurrencies</b>
                 </div>
               </div>
               <a class="button  button--small  button--green  account__button" href="#">Buy Now</a>
