--- a/investix/account-programs/basic.html
+++ b/investix/account-programs/basic.html
@@ -73,7 +73,7 @@
         </div>
       </div>
     </section>
-    <section class="account-programs__edge">
+    <section class="account-programs__edge  account-programs__edge--basic">
       <div class="container">
         <div class="account-programs__flex">
           <div class="account-programs__box  account-programs__box--video">
