--- a/investix/account-programs/account.html
+++ b/investix/account-programs/account.html
@@ -85,7 +85,7 @@
               <p class="account__text">Investix's BASIC program has all you need to get started: from a Self-Study course to a live Trading Chat Room.</p>
               <p class="account__text">Join this program and be eligible to apply for a $14,000 funded trading account with a maximum loss limit of $700, and receive 70%* of the net profits you generate.</p>
               <b class="account__name">Program Include</b>
-              <div class="account__flex">
+              <div class="account__flex  account__flex--edge">
                 <div class="account__box  account__box--video">
                   <b>Unlimited Online Videos Lessons Pack 1+2</b>
                 </div>
@@ -99,7 +99,7 @@
                   <b>1 Month Trading Room Access</b>
                 </div>
               </div>
-              <div class="account__flex  account__flex--around  account__flex--second">
+              <div class="account__flex  account__flex--second  account__flex--edge">
                 <div class="account__box  account__box--webinar">
                   <b>1 Month Webinar Access</b>
                 </div>
@@ -108,6 +108,9 @@
                 </div>
                 <div class="account__box  account__box--analysis">
                   <b>Technical Analysis - The Basic</b>
+                </div>
+                <div class="account__box  account__box--hidden">
+                  <!-- <b>Technical Analysis - The Basic</b> -->
                 </div>
               </div>
               <a class="button  button--small  button--green  account__button" href="#">Buy Now</a>
@@ -139,7 +142,7 @@
                   <b>3 Month Trading Room Access</b>
                 </div>
               </div>
-              <div class="account__flex  account__flex--second">
+              <div class="account__flex  account__flex--second  account__flex--edge">
                 <div class="account__box  account__box--webinar">
                   <b>3 Month Webinar Access</b>
                 </div>
@@ -153,12 +156,18 @@
                   <b>Learn Advanced<br>Trading Strategies</b>
                 </div>
               </div>
-              <div class="account__flex  account__flex--second  account__flex--around">
+              <div class="account__flex  account__flex--second  account__flex--edge">
                 <div class="account__box  account__box--risk">
                   <b>Risk Management<br>Tools</b>
                 </div>
                 <div class="account__box  account__box--bonus">
                   <b><strong>Bonus:</strong> Introduction to Crypto and Cryptocurrencies</b>
+                </div>
+                <div class="account__box  account__box--hidden">
+                  <!-- <b>Technical Analysis - The Basic</b> -->
+                </div>
+                <div class="account__box  account__box--hidden">
+                  <!-- <b>Technical Analysis - The Basic</b> -->
                 </div>
               </div>
               <a class="button  button--small  button--green  account__button" href="#">Buy Now</a>
@@ -176,7 +185,7 @@
               <p class="account__text">Investix's EXPERT program has all you need to get started: from a Self-Study course to a live Trading Chat Room.</p>
               <p class="account__text">Join this program and be eligible to apply for a $14,000 funded trading account with a maximum loss limit of $700, and receive 70%* of the net profits you generate.</p>
               <b class="account__name">Program Include</b>
-              <div class="account__flex">
+              <div class="account__flex  account__flex--edge">
                 <div class="account__box  account__box--video">
                   <b>Unlimited Online Videos Lessons Pack 1-4</b>
                 </div>
@@ -190,7 +199,7 @@
                   <b>5 Month Trading Room Access</b>
                 </div>
               </div>
-              <div class="account__flex  account__flex--second">
+              <div class="account__flex  account__flex--second  account__flex--edge">
                 <div class="account__box  account__box--webinar">
                   <b>5 Month Webinar Access</b>
                 </div>
@@ -204,7 +213,7 @@
                   <b>Learn Advanced<br>Trading Strategies</b>
                 </div>
               </div>
-              <div class="account__flex  account__flex--second">
+              <div class="account__flex  account__flex--second  account__flex--edge">
                 <div class="account__box  account__box--session">
                   <b>Weekly Group<br>Mentoring Sessions</b>
                 </div>
@@ -233,7 +242,7 @@
               <p class="account__text">Investix's PRO program has all you need to get started: from a Self-Study course to a live Trading Chat Room.</p>
               <p class="account__text">Join this program and be eligible to apply for a $14,000 funded trading account with a maximum loss limit of $700, and receive 70%* of the net profits you generate.</p>
               <b class="account__name">Program Include</b>
-              <div class="account__flex">
+              <div class="account__flex  account__flex--edge">
                 <div class="account__box  account__box--video">
                   <b>Unlimited Online Videos Lessons All Packages</b>
                 </div>
@@ -247,7 +256,7 @@
                   <b>1 Year Trading Room Access</b>
                 </div>
               </div>
-              <div class="account__flex  account__flex--second">
+              <div class="account__flex  account__flex--second  account__flex--edge">
                 <div class="account__box  account__box--webinar">
                   <b>1 Year Webinar Access</b>
                 </div>
@@ -261,7 +270,7 @@
                   <b>Learn Advanced<br>Trading Strategies</b>
                 </div>
               </div>
-              <div class="account__flex  account__flex--second">
+              <div class="account__flex  account__flex--second  account__flex--edge">
                 <div class="account__box  account__box--session">
                   <b>Weekly Group<br>Mentoring Sessions</b>
                 </div>
@@ -275,12 +284,18 @@
                   <b>Three Live 3-hours<br>Online Sessions 1:1</b>
                 </div>
               </div>
-              <div class="account__flex  account__flex--second  account__flex--around">
+              <div class="account__flex  account__flex--second  account__flex--edge">
                 <div class="account__box  account__box--pers">
                   <b>Personal Mentoring</b>
                 </div>
                 <div class="account__box  account__box--bonus">
                   <b><strong>Bonus:</strong> Introduction to Crypto and Cryptocurrencies</b>
+                </div>
+                <div class="account__box  account__box--hidden">
+                  <!-- <b>Technical Analysis - The Basic</b> -->
+                </div>
+                <div class="account__box  account__box--hidden">
+                  <!-- <b>Technical Analysis - The Basic</b> -->
                 </div>
               </div>
               <a class="button  button--small  button--green  account__button" href="#">Buy Now</a>
@@ -326,7 +341,7 @@
                   <b>Learn Advanced<br>Trading Strategies</b>
                 </div>
               </div>
-              <div class="account__flex  account__flex--second">
+              <div class="account__flex  account__flex--second  account__flex--edge">
                 <div class="account__box  account__box--session">
                   <b>Weekly Group<br>Mentoring Sessions</b>
                 </div>
@@ -340,7 +355,7 @@
                   <b>Three Live 3-hours<br>Online Sessions 1:1</b>
                 </div>
               </div>
-              <div class="account__flex  account__flex--second">
+              <div class="account__flex  account__flex--second  account__flex--edge">
                 <div class="account__box  account__box--pers">
                   <b>Personal Mentoring</b>
                 </div>
