--- a/investix/account-programs/ultimate.html
+++ b/investix/account-programs/ultimate.html
@@ -507,7 +507,7 @@
     </div>
     <hr class="footer__hr">
     <div class="container">
-      <p class="footer__text">Investix is a day trading training school. We offer courses including stock trading, CFDs, options, futures and foreign exchange. At Investix, we specialize in providing day trading courses with inexperienced beginners and experienced traders. We offer three learning options: self-taught online courses, so you can study at home network teaching there is a unique one-on-one teaching. We also offer online real-time discussion groups and existing sub-accounts for students to choose. Most of our services have several language options, including Spanish, German, French, Russian, Hungarian, Italian, Arabic, etc.</p>
+      <p class="footer__text">Investix is a day trading training school. We offer courses including stock trading, CFDs, options, futures and foreign exchange. At Investix, we specialize in providing day trading courses with inexperienced beginners and experienced traders. We offer three learning options: self-taught online courses, so you can study at home network teaching there is a unique one-on-one teaching. We also offer online real-time discussion groups and existing sub-accounts for students to choose.</p>
       <p class="footer__text">All purchases are made exclusively to the merchant Investix for educational services. Any potential earnings or losses incurred in the funded trading sub-account have no bearing whatsoever on Investix as it is completely independent from Investix’s educational services and relevant package pricing.</p>
     </div>
     <div class="footer__copyright">
