--- a/investix/index.html
+++ b/investix/index.html
@@ -136,11 +136,11 @@
       <div class="live__flex">
         <div class="live__box">
           <h1 class="live__title">Join our live<br>trading chat room</h1>
-          <p class="live__text">New to day trading? Looking to improve your skill set? Join us in our online Trading ChatRoom and allow Meir Barak and his team to be your personal mentors. Join hundreds of traders from different countries; learn and mirror the trades of some of the world’s leading day traders.</p>
+          <p class="live__text">New to day trading? Looking to improve your skill set? Join us in our online Trading ChatRoom and allow Investix team to be your personal mentors. Join hundreds of traders from different countries; learn and mirror the trades of some of the world’s leading day traders.</p>
           <a class="button  button--medium  live__button" href="#">14 Days Free Trial</a>
           <a class="button  button--medium  button--white  live__button" href="#">Read More</a>
         </div>
-        <div class="live__mockup"></div>
+        <!-- <div class="live__mockup"></div> -->
       </div>
     </div>
   </section>
@@ -458,7 +458,7 @@
     </div>
     <hr class="footer__hr">
     <div class="container">
-      <p class="footer__text">Investix is a day trading training school. We offer courses including stock trading, CFDs, options, futures and foreign exchange. At Investix, we specialize in providing day trading courses with inexperienced beginners and experienced traders. We offer three learning options: self-taught online courses, so you can study at home network teaching there is a unique one-on-one teaching. We also offer online real-time discussion groups and existing sub-accounts for students to choose. Most of our services have several language options, including Spanish, German, French, Russian, Hungarian, Italian, Arabic, etc.</p>
+      <p class="footer__text">Investix is a day trading training school. We offer courses including stock trading, CFDs, options, futures and foreign exchange. At Investix, we specialize in providing day trading courses with inexperienced beginners and experienced traders. We offer three learning options: self-taught online courses, so you can study at home network teaching there is a unique one-on-one teaching. We also offer online real-time discussion groups and existing sub-accounts for students to choose.</p>
       <p class="footer__text">All purchases are made exclusively to the merchant Investix for educational services. Any potential earnings or losses incurred in the funded trading sub-account have no bearing whatsoever on Investix as it is completely independent from Investix’s educational services and relevant package pricing.</p>
     </div>
     <div class="footer__copyright">
