--- a/investix/account-programs/crypto-master.html
+++ b/investix/account-programs/crypto-master.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
-  <title>Expert Program - Investix</title>
+  <title>Crypto Master - Investix</title>
   <link rel="stylesheet" href="../css/style.min.css">
   <!-- Favicon -->
   <link rel="icon" type="image/svg+xml" href="../img/favicon/favicon.svg">
@@ -34,10 +34,10 @@
               <ul class="nav__sublist">
                 <li><a href="basic.html">Basic Program</a></li>
                 <li><a href="advanced.html">Advanced Program</a></li>
-                <li><a class="nav__active">Expert Program</a></li>
+                <li><a href="expert.html">Expert Program</a></li>
                 <li><a href="pro.html">Pro Program</a></li>
                 <li><a href="ultimate.html">Ultimate Program</a></li>
-                <li><a href="crypto-master.html">Crypto Master</a></li>
+                <li><a class="nav__active">Crypto Master</a></li>
               </ul>
             </li>
             <!-- <li><a href="#">Education</a></li>
@@ -56,7 +56,7 @@
   <main class="account-programs">
     <section class="account-programs__title">
       <div class="container">
-        <h1 class="account-programs__name">Expert Program</h1>
+        <h1 class="account-programs__name">Crypto Master</h1>
       </div>
     </section>
     <section class="account-programs__desc">
@@ -64,57 +64,57 @@
         <div class="account-programs__flex">
           <div class="account-programs__left">
             <h2 class="account-programs__name  account-programs__name--small">Professional Program 2018</h2>
-            <p class="account-programs__text">The $3,500 EXPERT Program includes everything in both the BASIC and ADVANCED Programs, with 8 months of mentorship, plus the Star Trader Course and the ability to apply for a funded $160,000 trading account.</p>
-            <p class="account-programs__price">Price <b>$3500</b></p>
+            <p class="account-programs__text">The $1,999 CRYPTO MASTER Program is our premier program. It has all of the tools needed to make it as a professional trader. You receive all of the benefits of the BASIC, ADVANCED, EXPERT, PRO, ULTIMATE programs with 3 months of mentorship, plus the Top Trader Course and the ability to apply for a funded $240,000 trading account.</p>
+            <p class="account-programs__price">Price <b>$1999</b></p>
             <small class="account-programs__guarantee">14-Day Full Money Back Guarantee!</small>
             <a class="button  button--small  button--green  account-programs__button" href="#">Buy Now</a>
           </div>
-          <div class="account-programs__right  account-programs__right--expert"></div>
+          <div class="account-programs__right  account-programs__right--crypto"></div>
         </div>
       </div>
     </section>
-    <section class="account-programs__edge  account-programs__edge--expert">
+    <section class="account-programs__edge  account-programs__edge--crypto">
       <div class="container">
         <div class="account-programs__flex">
-          <div class="account-programs__box  account-programs__box--video">
-            <b>Unlimited Online Videos<br>Lessons Pack 1-4</b>
+          <div class="account-programs__box  account-programs__box--bonus">
+            <b>Introduction to Crypto and Cryptocurrencies</b>
           </div>
-          <div class="account-programs__box  account-programs__box--reviews">
-            <b>Daily Reviews</b>
+          <div class="account-programs__box  account-programs__box--buy">
+            <b>How To Buy, Store And Trade Bitcoin, Etherum, Litecoin</b>
           </div>
-          <div class="account-programs__box  account-programs__box--weekly">
-            <b>Weekly Reviews</b>
+          <div class="account-programs__box  account-programs__box--altcoins">
+            <b>Altcoins and the Cryptocurrency Ecosystem</b>
           </div>
-          <div class="account-programs__box  account-programs__box--room">
-            <b>5 Month Trading<br>Room Access</b>
+          <div class="account-programs__box  account-programs__box--exch">
+            <b>Exchanges, Wallets, and Trading Tools</b>
           </div>
         </div>
         <div class="account-programs__flex">
-          <div class="account-programs__box  account-programs__box--webinar">
-            <b>5 Month Webinar<br>Access</b>
-          </div>
-          <div class="account-programs__box  account-programs__box--demo">
-            <b>Demo Training<br>Account</b>
+          <div class="account-programs__box  account-programs__box--port">
+            <b>Build Your Crypto Portfolio - 1:1 Sessions (2 Sessions)</b>
           </div>
           <div class="account-programs__box  account-programs__box--analysis">
-            <b>Technical Analysis -<br>Expert + Price Action</b>
+            <b>Technical Analysis Advanced Market Scanner - How To Find Breakouts</b>
           </div>
-          <div class="account-programs__box  account-programs__box--learn">
-            <b>Learn Advanced<br>Trading Strategies</b>
+          <div class="account-programs__box  account-programs__box--behind">
+            <b>Behind the Scenes of a Cryptocurrency Exchange: Secrets and Strategy</b>
+          </div>
+          <div class="account-programs__box  account-programs__box--market">
+            <b>Market Psychology</b>
           </div>
         </div>
         <div class="account-programs__flex">
           <div class="account-programs__box  account-programs__box--session">
-            <b>Weekly Group<br>Mentoring Sessions</b>
+            <b>Fundamental Analysis</b>
           </div>
-          <div class="account-programs__box  account-programs__box--risk">
-            <b>Risk Management<br>Tools</b>
+          <div class="account-programs__box  account-programs__box--live">
+            <b>Live Trading Sessions (3 Months)</b>
           </div>
           <div class="account-programs__box  account-programs__box--signal">
-            <b>Daily Signals</b>
+            <b>Crypto Signals - 6 Months</b>
           </div>
-          <div class="account-programs__box  account-programs__box--bonus">
-            <b><strong>Bonus:</strong> Introduction to Crypto and Cryptocurrencies</b>
+          <div class="account-programs__box  account-programs__box--secret">
+            <b>Crypto Secret Community - 6 Months</b>
           </div>
         </div>
       </div>
@@ -147,7 +147,7 @@
             Program
           </p>
           <a class="button  button--small  button--green  services__button" href="#">Buy Now</a>
-          <a class="button  button--small  button--transparent  services__button">Read More</a>
+          <a class="button  button--small  button--transparent  services__button" href="expert.html">Read More</a>
         </div>
         <div class="services__box  services__box--pro">
           <p class="services__name">
@@ -173,7 +173,7 @@
             Master
           </p>
           <a class="button  button--small  button--green  services__button" href="#">Buy Now</a>
-          <a class="button  button--small  button--transparent  services__button" href="crypto-master.html">Read More</a>
+          <a class="button  button--small  button--transparent  services__button">Read More</a>
         </div>
         <div class="services__box  services__box--desc">
           <p>Our funded trading Account programs are designed to help you become a consistently profitable trader with the best education, but without the worry of losing your own capital.</p>
@@ -487,9 +487,9 @@
           <li><b>Funded Accounts</b></li>
           <li><a href="basic.html">Basic Program</a></li>
           <li><a href="advanced.html">Advanced Program</a></li>
-          <li><a class="footer__active">Expert Program</a></li>
+          <li><a href="expert.html">Expert Program</a></li>
           <li><a href="pro.html">Pro Program</a></li>
-          <li><a href="ultimate.html">Ultimate Program</a></li>
+          <li><a class="footer__active">Ultimate Program</a></li>
           <li><a href="crypto-master.html">Crypto Master</a></li>
         </ul>
         <!-- <ul class="footer__list">
