--- a/investix/index.html
+++ b/investix/index.html
@@ -129,6 +129,25 @@
           <a class="button  button--small  button--transparent  services__button" href="account-programs/ultimate.html">Read More</a>
         </div>
       </div>
+      <div class="services__flex  services__flex--second">
+        <div class="services__box  services__box--crypto">
+          <p class="services__name">
+            <b>Crypto</b>
+            Master
+          </p>
+          <a class="button  button--small  button--green  services__button" href="#">Buy Now</a>
+          <a class="button  button--small  button--transparent  services__button" href="account-programs/basic.html">Read More</a>
+        </div>
+        <div class="services__box  services__box--desc">
+          <p>Our funded trading Account programs are designed to help you become a consistently profitable trader with the best education, but without the worry of losing your own capital.</p>
+          <p>Our funded trading Account programs are designed to help you become a consistently profitable trader with the best education, but without the worry of losing your own capital.</p>
+          <p>Our funded trading Account programs are designed to help you become a consistently profitable trader with the best education, but without the worry of losing your own capital.</p>
+          <p>Our funded trading Account programs are designed to help you become a consistently profitable trader with the best education, but without the worry of losing your own capital.</p>
+          <p>Our funded trading Account programs are designed to help you become a consistently profitable trader with the best education, but without the worry of losing your own capital.</p>
+          <p>Our funded trading Account programs are designed to help you become a consistently profitable trader with the best education, but without the worry of losing your own capital.</p>
+          <p>Our funded trading Account programs are designed to help you become a consistently profitable trader with the best education, but without the worry of losing your own capital.</p>
+        </div>
+      </div>
     </div>
   </section>
   <section class="live">
