--- a/investix/account-programs/advanced.html
+++ b/investix/account-programs/advanced.html
@@ -170,13 +170,17 @@
           <a class="button  button--small  button--transparent  services__button" href="crypto-master.html">Read More</a>
         </div>
         <div class="services__box  services__box--desc">
-          <p>Our funded trading Account programs are designed to help you become a consistently profitable trader with the best education, but without the worry of losing your own capital.</p>
-          <p>Our funded trading Account programs are designed to help you become a consistently profitable trader with the best education, but without the worry of losing your own capital.</p>
-          <p>Our funded trading Account programs are designed to help you become a consistently profitable trader with the best education, but without the worry of losing your own capital.</p>
-          <p>Our funded trading Account programs are designed to help you become a consistently profitable trader with the best education, but without the worry of losing your own capital.</p>
-          <p>Our funded trading Account programs are designed to help you become a consistently profitable trader with the best education, but without the worry of losing your own capital.</p>
-          <p>Our funded trading Account programs are designed to help you become a consistently profitable trader with the best education, but without the worry of losing your own capital.</p>
-          <p>Our funded trading Account programs are designed to help you become a consistently profitable trader with the best education, but without the worry of losing your own capital.</p>
+          <h2>Learn Trading Crypto with Investix</h2>
+          <p>Cryptocurrencies are a form of money for the future, and have the potential to transform the global financial system. Regardless of the negative issues surrounding cryptocurrency trading, more people are using it, increasing the demand, and for this reason the price is rising. Its volatility makes for an excellent addition to any financial trading portfolio.</p>
+          <p>If you are looking to trade, remember that in addition to the Bitcoin, there are several other altcoins also reaching a high-level market share such as Ether, Bitcoin Cash and Litecoin.  But it should be noted that cryptocurrencies have crashed before, and like other investment vehicles could happen once again. Moving forward there are discussions on how to manage the currencies and that could adjust the price. The long-term ramifications are still unknown but cryptocurrency is not going anywhere.</p>
+          <b>Why trade crypto currencies with Investix?</b>
+          <p>To start with, we offer trading benefits that regular cryptocurrency exchanges’ platforms don’t.</p>
+          <ul>
+            <li>Short Selling, which is the process of being able to continue trading during falling markets and being able to profit from the price decrease.</li>
+            <li>High leverage, which refers to the process of borrowing funds from the broker in order to trade a much larger position with minimal investment.</li>
+            <li>And finally, the availability of auto trading – either algorithmic via using pre-programmed trading bots, or social via copying (Zulutrade) the positions of experienced traders with a proven success record.</li>
+          </ul>
+          <b>Join the cryptocurrency wave today!</b>
         </div>
       </div>
     </div>
