--- a/investix/index.html
+++ b/investix/index.html
@@ -136,7 +136,7 @@
             Master
           </p>
           <a class="button  button--small  button--green  services__button" href="#">Buy Now</a>
-          <a class="button  button--small  button--transparent  services__button" href="account-programs/basic.html">Read More</a>
+          <a class="button  button--small  button--transparent  services__button" href="account-programs/crypto-master.html">Read More</a>
         </div>
         <div class="services__box  services__box--desc">
           <h2>Learn Trading Crypto with Investix</h2>
