--- a/investix/account-programs/account.html
+++ b/investix/account-programs/account.html
@@ -176,12 +176,12 @@
                   <b>Technical Analysis - The Basic + Advanced</b>
                 </div>
                 <div class="account__box  account__box--learn">
-                  <b>Learn Advanced<br>Trading Strategies</b>
+                  <b>Learn Advanced Trading Strategies</b>
                 </div>
               </div>
               <div class="account__flex  account__flex--second  account__flex--edge">
                 <div class="account__box  account__box--risk">
-                  <b>Risk Management<br>Tools</b>
+                  <b>Risk Management Tools</b>
                 </div>
                 <div class="account__box  account__box--bonus">
                   <b><strong>Bonus:</strong> Introduction to Crypto and Cryptocurrencies</b>
