--- a/investix/account-programs/basic.html
+++ b/investix/account-programs/basic.html
@@ -77,7 +77,7 @@
       <div class="container">
         <div class="account-programs__flex">
           <div class="account-programs__box  account-programs__box--video">
-            <b>Unlimited Online Videos<br>Lessons Pack 1+2</b>
+            <b>Unlimited Online Videos Lessons Pack 1+2</b>
           </div>
           <div class="account-programs__box  account-programs__box--reviews">
             <b>Daily Reviews</b>
@@ -86,18 +86,18 @@
             <b>Weekly Reviews</b>
           </div>
           <div class="account-programs__box  account-programs__box--room">
-            <b>1 Month Trading<br>Room Access</b>
+            <b>1 Month Trading Room Access</b>
           </div>
         </div>
         <div class="account-programs__flex  account-programs__flex--around">
           <div class="account-programs__box  account-programs__box--webinar">
-            <b>1 Month Webinar<br>Access</b>
+            <b>1 Month Webinar Access</b>
           </div>
           <div class="account-programs__box  account-programs__box--demo">
-            <b>Demo Training<br>Account</b>
+            <b>Demo Training Account</b>
           </div>
           <div class="account-programs__box  account-programs__box--analysis">
-            <b>Technical Analysis -<br>The Basic</b>
+            <b>Technical Analysis - The Basic</b>
           </div>
         </div>
       </div>
