--- a/investix/account-programs/expert.html
+++ b/investix/account-programs/expert.html
@@ -77,7 +77,7 @@
       <div class="container">
         <div class="account-programs__flex">
           <div class="account-programs__box  account-programs__box--video">
-            <b>Unlimited Online Videos<br>Lessons Pack 1-4</b>
+            <b>Unlimited Online Videos Lessons Pack 1-4</b>
           </div>
           <div class="account-programs__box  account-programs__box--reviews">
             <b>Daily Reviews</b>
@@ -86,29 +86,29 @@
             <b>Weekly Reviews</b>
           </div>
           <div class="account-programs__box  account-programs__box--room">
-            <b>5 Month Trading<br>Room Access</b>
+            <b>5 Month Trading Room Access</b>
           </div>
         </div>
         <div class="account-programs__flex">
           <div class="account-programs__box  account-programs__box--webinar">
-            <b>5 Month Webinar<br>Access</b>
+            <b>5 Month Webinar Access</b>
           </div>
           <div class="account-programs__box  account-programs__box--demo">
-            <b>Demo Training<br>Account</b>
+            <b>Demo Training Account</b>
           </div>
           <div class="account-programs__box  account-programs__box--analysis">
-            <b>Technical Analysis -<br>Expert + Price Action</b>
+            <b>Technical Analysis - Expert + Price Action</b>
           </div>
           <div class="account-programs__box  account-programs__box--learn">
-            <b>Learn Advanced<br>Trading Strategies</b>
+            <b>Learn Advanced Trading Strategies</b>
           </div>
         </div>
         <div class="account-programs__flex">
           <div class="account-programs__box  account-programs__box--session">
-            <b>Weekly Group<br>Mentoring Sessions</b>
+            <b>Weekly Group Mentoring Sessions</b>
           </div>
           <div class="account-programs__box  account-programs__box--risk">
-            <b>Risk Management<br>Tools</b>
+            <b>Risk Management Tools</b>
           </div>
           <div class="account-programs__box  account-programs__box--signal">
             <b>Daily Signals</b>
