--- a/investix/account-programs/advanced.html
+++ b/investix/account-programs/advanced.html
@@ -77,7 +77,7 @@
       <div class="container">
         <div class="account-programs__flex">
           <div class="account-programs__box  account-programs__box--video">
-            <b>Unlimited Online Videos<br>Lessons Pack 1+2+3</b>
+            <b>Unlimited Online Videos Lessons Pack 1+2+3</b>
           </div>
           <div class="account-programs__box  account-programs__box--reviews">
             <b>Daily Reviews</b>
@@ -86,26 +86,26 @@
             <b>Weekly Reviews</b>
           </div>
           <div class="account-programs__box  account-programs__box--room">
-            <b>3 Month Trading<br>Room Access</b>
+            <b>3 Month Trading Room Access</b>
           </div>
         </div>
         <div class="account-programs__flex">
           <div class="account-programs__box  account-programs__box--webinar">
-            <b>3 Month Webinar<br>Access</b>
+            <b>3 Month Webinar Access</b>
           </div>
           <div class="account-programs__box  account-programs__box--demo">
-            <b>Demo Training<br>Account</b>
+            <b>Demo Training Account</b>
           </div>
           <div class="account-programs__box  account-programs__box--analysis">
-            <b>Technical Analysis -<br>The Basic + Advanced</b>
+            <b>Technical Analysis - The Basic + Advanced</b>
           </div>
           <div class="account-programs__box  account-programs__box--learn">
-            <b>Learn Advanced<br>Trading Strategies</b>
+            <b>Learn Advanced Trading Strategies</b>
           </div>
         </div>
         <div class="account-programs__flex  account-programs__flex--around">
           <div class="account-programs__box  account-programs__box--risk">
-            <b>Risk Management<br>Tools</b>
+            <b>Risk Management Tools</b>
           </div>
           <div class="account-programs__box  account-programs__box--bonus">
             <b><strong>Bonus:</strong> Introduction to Crypto and Cryptocurrencies</b>
