--- a/investix/account-programs/ultimate.html
+++ b/investix/account-programs/ultimate.html
@@ -77,7 +77,7 @@
       <div class="container">
         <div class="account-programs__flex">
           <div class="account-programs__box  account-programs__box--video">
-            <b>Unlimited Online Videos<br>Lessons All Packages</b>
+            <b>Unlimited Online Videos Lessons All Packages</b>
           </div>
           <div class="account-programs__box  account-programs__box--reviews">
             <b>Daily Reviews</b>
@@ -86,35 +86,35 @@
             <b>Weekly Reviews</b>
           </div>
           <div class="account-programs__box  account-programs__box--room">
-            <b>1 Year Trading<br>Room Access</b>
+            <b>1 Year Trading Room Access</b>
           </div>
         </div>
         <div class="account-programs__flex">
           <div class="account-programs__box  account-programs__box--webinar">
-            <b>1 Year Webinar<br>Access</b>
+            <b>1 Year Webinar Access</b>
           </div>
           <div class="account-programs__box  account-programs__box--demo">
-            <b>Demo Training<br>Account</b>
+            <b>Demo Training Account</b>
           </div>
           <div class="account-programs__box  account-programs__box--analysis">
             <b>Technical Analysis + Price Action + Turtle Trading</b>
           </div>
           <div class="account-programs__box  account-programs__box--learn">
-            <b>Learn Advanced<br>Trading Strategies</b>
+            <b>Learn Advanced Trading Strategies</b>
           </div>
         </div>
         <div class="account-programs__flex">
           <div class="account-programs__box  account-programs__box--session">
-            <b>Weekly Group<br>Mentoring Sessions</b>
+            <b>Weekly Group Mentoring Sessions</b>
           </div>
           <div class="account-programs__box  account-programs__box--risk">
-            <b>Risk Management<br>Tools</b>
+            <b>Risk Management Tools</b>
           </div>
           <div class="account-programs__box  account-programs__box--signal">
             <b>Daily Signals</b>
           </div>
           <div class="account-programs__box  account-programs__box--live">
-            <b>Three Live 3-hours<br>Online Sessions 1:1</b>
+            <b>Three Live 3-hours Online Sessions 1:1</b>
           </div>
         </div>
         <div class="account-programs__flex">
